<resources>
    <!--顶部标题栏-->
    <string name="goback"><font size="8">返回</font></string>
    <!--登录界面-->
    <string name="app_title">皖仪云平台</string>
    <string name="user_id"><font size="10"> 用户名</font></string>
    <string name="user_password"><font size="10">密码</font></string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="login_in_process">正在登录，请稍后...</string>
    <string name="check_in_process">正在验证，请稍后...</string>
    <string name="login_fail">登录失败，请检查用户名或密码是否正确</string>
    <string name="login_fail_net">登录失败，请检查网络或稍后再试</string>
    <string name="login_userid_error">用户名不存在</string>
    <string name="login_password_error">密码错误</string>
    <string name="app_version">程序版本：</string>
    <string name="app_copyright">皖仪科技 版权所有&#169;2019&#8211;2020</string>
    <string name="no_plugin_tip">所有在线监测平台均未开通权限</string>

    <!--更新弹窗-->
    <string name="confirm_update_app">发现新版本</string>
    <string name="update_app_now">立即更新</string>
    <string name="cancel_update_app"><font size="8">暂不更新</font></string>

    <!--对话框界面-->
    <string name="confirm_exit_app">确定要退出登录吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="select_tip">请选择</string>
    <string name="input_tip">请输入</string>

    <!--公共提示-->
    <string name="empty"></string>
    <string name="network_server_error">网络或服务器通信超时！</string>
    <string name="request_data_in_process">正在请求数据，请稍后...</string>
    <string name="request_data_success">获取数据成功！</string>
    <string name="request_data_fail">请求数据失败！</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="load_more_data">上滑加载更多</string>
    <string name="sd_card_missing">内存卡不存在！</string>
    <string name="hint">提示</string>
    <string name="need_access_coarse_location"> 请在设置中打开定位权限</string>
    <string name="need_external_storage"> 请在设置中打开读写权限</string>
    <string name="down_loading"> 正在下载……</string>
    <string name="filter_select_hint">请选择</string>
    <string name="filter_zhi">至</string>
    <string name="filter_please_select_time">请选择日期</string>
    <string name="filter_please_select_start_time">请选择开始日期</string>
    <string name="filter_please_select_end_time">请选择结束日期</string>
    <string name="home_bottom_one_title">首页</string>
    <string name="home_bottom_two_title">地图</string>
    <string name="home_bottom_three_title">我的</string>

    <string name="net_fail_tip">网络异常，请检查网络后重试</string>
</resources>
